--- a/FinalProject/Views/Service/Index.cshtml
+++ b/FinalProject/Views/Service/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<!-- Page Title-->
+﻿@model ServiceViewModel
+<!-- Page Title-->
 <div class="rn-page-title">
     <div class="rn-pt-overlayer"></div>
     <div class="container">
@@ -29,96 +30,26 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-4 col-md-6">
+            @foreach (var item in Model.Offers)
+            {
+                <div class="col-lg-4 col-md-6">
 
-                <!-- Service Item-->
-                <div class="rn-service-item">
-                    <div class="rn-service-icon">
-                        <i class="lnr lnr-star"></i>
+                    <!-- Service Item-->
+                    <div class="rn-service-item">
+                        <div class="rn-service-icon">
+                            <i class="lnr @item.Icon"></i>
+                        </div>
+                        <div class="rn-service-title">@item.Title</div>
+                        <div class="rn-service-desc">
+                            <p>@item.Text</p>
+                        </div>
                     </div>
-                    <div class="rn-service-title">Best Price Guarantee</div>
-                    <div class="rn-service-desc">
-                        <p>Fusce blandit at tortor vitae ultricies. Praesent efficitur feugiat leo id tempus. Sed pulvinar gravida sodales.</p>
-                    </div>
+                    <!-- End Service Item-->
+
                 </div>
-                <!-- End Service Item-->
+            }
 
-            </div>
-            <div class="col-lg-4 col-md-6">
 
-                <!-- Service Item-->
-                <div class="rn-service-item">
-                    <div class="rn-service-icon">
-                        <i class="lnr lnr-phone-handset"></i>
-                    </div>
-                    <div class="rn-service-title">Phone Reservation</div>
-                    <div class="rn-service-desc">
-                        <p>Fusce blandit at tortor vitae ultricies. Praesent efficitur feugiat leo id tempus. Sed pulvinar gravida sodales.</p>
-                    </div>
-                </div>
-                <!-- End Service Item-->
-
-            </div>
-            <div class="col-lg-4 col-md-6">
-
-                <!-- Service Item-->
-                <div class="rn-service-item">
-                    <div class="rn-service-icon">
-                        <i class="lnr lnr-user"></i>
-                    </div>
-                    <div class="rn-service-title">Personal Driver</div>
-                    <div class="rn-service-desc">
-                        <p>Fusce blandit at tortor vitae ultricies. Praesent efficitur feugiat leo id tempus. Sed pulvinar gravida sodales.</p>
-                    </div>
-                </div>
-                <!-- End Service Item-->
-
-            </div>
-            <div class="col-lg-4 col-md-6">
-
-                <!-- Service Item-->
-                <div class="rn-service-item">
-                    <div class="rn-service-icon">
-                        <i class="lnr lnr-car"></i>
-                    </div>
-                    <div class="rn-service-title">Best Quality Cars</div>
-                    <div class="rn-service-desc">
-                        <p>Fusce blandit at tortor vitae ultricies. Praesent efficitur feugiat leo id tempus. Sed pulvinar gravida sodales.</p>
-                    </div>
-                </div>
-                <!-- End Service Item-->
-
-            </div>
-            <div class="col-lg-4 col-md-6">
-
-                <!-- Service Item-->
-                <div class="rn-service-item">
-                    <div class="rn-service-icon">
-                        <i class="lnr lnr-calendar-full"></i>
-                    </div>
-                    <div class="rn-service-title">Reservation Anytime</div>
-                    <div class="rn-service-desc">
-                        <p>Fusce blandit at tortor vitae ultricies. Praesent efficitur feugiat leo id tempus. Sed pulvinar gravida sodales.</p>
-                    </div>
-                </div>
-                <!-- End Service Item-->
-
-            </div>
-            <div class="col-lg-4 col-md-6">
-
-                <!-- Service Item-->
-                <div class="rn-service-item">
-                    <div class="rn-service-icon">
-                        <i class="lnr lnr-rocket"></i>
-                    </div>
-                    <div class="rn-service-title">Customer Support</div>
-                    <div class="rn-service-desc">
-                        <p>Fusce blandit at tortor vitae ultricies. Praesent efficitur feugiat leo id tempus. Sed pulvinar gravida sodales.</p>
-                    </div>
-                </div>
-                <!-- End Service Item-->
-
-            </div>
         </div>
     </div>
 </section>
@@ -153,87 +84,37 @@
                 <div class="rn-testimonials">
                     <div class="rn-testimonials-carousel carousel slide" id="rn-testimonials" data-ride="carousel">
                         <div class="carousel-inner">
-                            <div class="carousel-item active">
+                            @for (int i = 0; i < Model.Testimonials.Count; i++)
+                            {
+                                <div class="carousel-item @(i == 0? "active": "")">
 
-                                <!-- Testimonial Item-->
-                                <blockquote class="rn-testimonial-item">
-                                    <div class="rn-testimonial-author">
-                                        <div class="rn-testimonial-author-thumb">
-                                            <img src="~/images/author-1.jpg" alt="John Doe" srcset="~/images/author-1.jpg 1x, ~/images/author-1@2x.jpg 2x" />
+                                    <!-- Testimonial Item-->
+                                    <blockquote class="rn-testimonial-item">
+                                        <div class="rn-testimonial-author">
+                                            <div class="rn-testimonial-author-thumb">
+                                                <img src="~/images/@Model.Testimonials[i].Photo" alt="@Model.Testimonials[i].Name" srcset="~/images/author-1.jpg 1x, ~/images/author-1@2x.jpg 2x" />
+                                            </div>
+                                            <div class="rn-testimonial-author-info">
+                                                <strong>@Model.Testimonials[i].Name</strong>
+                                                <p>@Model.Testimonials[i].Position, @Model.Testimonials[i].Company</p>
+                                            </div>
                                         </div>
-                                        <div class="rn-testimonial-author-info">
-                                            <strong>Katherine Powell</strong>
-                                            <p>CEO, Example Inc.</p>
-                                        </div>
-                                    </div>
-                                    <p>Curabitur neque turpis, pellentesque vel semper ut, tempor vel arcu. Nulla facilisi. Phasellus feugiat nunc eget eros varius, et mollis magna elementum.</p>
-                                    <footer>
-                                        <div class="rn-testimonial-rating">
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                        </div>
-                                    </footer>
-                                </blockquote>
-                                <!-- End Testimonial Item-->
+                                        <p>@Model.Testimonials[i].Text</p>
+                                        <footer>
+                                            <div class="rn-testimonial-rating">
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                                <i class="fas fa-star"></i>
+                                            </div>
+                                        </footer>
+                                    </blockquote>
+                                    <!-- End Testimonial Item-->
 
-                            </div>
-                            <div class="carousel-item">
+                                </div>
+                            }
 
-                                <!-- Testimonial Item-->
-                                <blockquote class="rn-testimonial-item">
-                                    <div class="rn-testimonial-author">
-                                        <div class="rn-testimonial-author-thumb">
-                                            <img src="~/images/author-2.jpg" alt="John Doe" srcset="~/images/author-2.jpg 1x, ~/images/author-2@2x.jpg 2x" />
-                                        </div>
-                                        <div class="rn-testimonial-author-info">
-                                            <strong>Patrick Cox</strong>
-                                            <p>CEO, Example Inc.</p>
-                                        </div>
-                                    </div>
-                                    <p>Curabitur neque turpis, pellentesque vel semper ut, tempor vel arcu. Nulla facilisi. Phasellus feugiat nunc eget eros varius, et mollis magna elementum.</p>
-                                    <footer>
-                                        <div class="rn-testimonial-rating">
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                        </div>
-                                    </footer>
-                                </blockquote>
-                                <!-- End Testimonial Item-->
-
-                            </div>
-                            <div class="carousel-item">
-
-                                <!-- Testimonial Item-->
-                                <blockquote class="rn-testimonial-item">
-                                    <div class="rn-testimonial-author">
-                                        <div class="rn-testimonial-author-thumb">
-                                            <img src="~/images/author-3.jpg" alt="John Doe" srcset="~/images/author-3.jpg 1x, ~/images/author-3@2x.jpg 2x" />
-                                        </div>
-                                        <div class="rn-testimonial-author-info">
-                                            <strong>Lauren Anderson</strong>
-                                            <p>CEO, Example Inc.</p>
-                                        </div>
-                                    </div>
-                                    <p>Curabitur neque turpis, pellentesque vel semper ut, tempor vel arcu. Nulla facilisi. Phasellus feugiat nunc eget eros varius, et mollis magna elementum.</p>
-                                    <footer>
-                                        <div class="rn-testimonial-rating">
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                        </div>
-                                    </footer>
-                                </blockquote>
-                                <!-- End Testimonial Item-->
-
-                            </div>
                         </div>
                         <a class="carousel-control-prev" href="#rn-testimonials" role="button" data-slide="prev">
                             <i class="fas fa-angle-left" aria-hidden="true"></i>
