--- a/FinalProject/Views/Shared/Components/Footer/Default.cshtml
+++ b/FinalProject/Views/Shared/Components/Footer/Default.cshtml
@@ -53,40 +53,33 @@
                                 <div class="col-6">
                                     <ul>
                                         <li>
-                                            <a href="#">About Us</a>
+                                            <a asp-action="AboutUs" asp-controller="Pages">About Us</a>
                                         </li>
                                         <li>
-                                            <a href="#">Contact Us</a>
+                                            <a asp-action="Index" asp-controller="Contact">Contact Us</a>
                                         </li>
                                         <li>
-                                            <a href="#">Support</a>
+                                            <a asp-action="Index" asp-controller="Contact">Support</a>
                                         </li>
                                         <li>
                                             <a href="#">View Booking</a>
                                         </li>
+                                        
                                         <li>
-                                            <a href="#">Affiliate Programme</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Marketplace</a>
+                                            <a asp-action="List" asp-controller="Cars">Marketplace</a>
                                         </li>
                                     </ul>
                                 </div>
                                 <div class="col-6">
                                     <ul>
                                         <li>
-                                            <a href="#">Site Map</a>
+                                            <a asp-action="Index" asp-controller="Home">Site Map</a>
                                         </li>
                                         
                                         <li>
-                                            <a href="#">Press</a>
+                                            <a asp-action="Blog" asp-controller="Blogs">Blogs</a>
                                         </li>
-                                        <li>
-                                            <a href="#">Get a Receipt</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Community</a>
-                                        </li>
+                                        
                                     </ul>
                                 </div>
                             </div>
